--- a/core/pom.xml
+++ b/core/pom.xml
@@ -174,6 +174,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>${commons-httpclient.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
 			<artifactId>dom4j</artifactId>
@@ -549,6 +561,7 @@
 			<groupId>pentaho</groupId>
 			<artifactId>pentaho-xul-core</artifactId>
 			<version>${project.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 			<exclusions>
 				<exclusion>
@@ -557,7 +570,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		
+    <dependency>
+      <groupId>pentaho-kettle</groupId>
+      <artifactId>kettle-core</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>pentaho-kettle</groupId>
+      <artifactId>kettle-engine</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+
 		<!-- =============================================== -->
 		<!-- !!! PENTAHO ARTIFACT WITH DIFFERENT VERSION !!! -->
 		<!-- =============================================== -->
@@ -580,42 +605,49 @@
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-core</artifactId>
 			<version>${hamcrest-core.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-library</artifactId>
 			<version>${hamcrest-library.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.google.code.bean-matchers</groupId>
 			<artifactId>bean-matchers</artifactId>
 			<version>${bean-matchers.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-junit4</artifactId>
 			<version>${jmock-junit4.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-legacy</artifactId>
 			<version>${jmock-legacy.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-mock</artifactId>
 			<version>${spring-mock.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 			<exclusions>
 				<exclusion>
@@ -628,12 +660,14 @@
 			<groupId>org.codehaus.jettison</groupId>
 			<artifactId>jettison</artifactId>
 			<version>${jettison.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-all</artifactId>
 			<version>${mockito-all.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 			<exclusions>
 				<exclusion>
@@ -646,6 +680,7 @@
 			<groupId>org.jmockit</groupId>
 			<artifactId>jmockit</artifactId>
 			<version>${jmockit.version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 	</dependencies>
