[BACKLOG-12101] fix test jar dependencies

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -2093,6 +2093,50 @@
 		</dependency>
 		<dependency>
 			<groupId>pentaho</groupId>
+      <artifactId>pentaho-platform-core</artifactId>
+      <version>${project.version}</version>
+
+      <classifier>tests</classifier>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-platform-repository</artifactId>
+      <version>${project.version}</version>
+
+      <classifier>tests</classifier>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>pentaho</groupId>
+      <artifactId>pentaho-platform-scheduler</artifactId>
+      <version>${project.version}</version>
+      <classifier>tests</classifier>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>
+					<groupId>*</groupId>
+					<artifactId>*</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>test</scope>
+    </dependency>
+		<dependency>
+			<groupId>pentaho</groupId>
 			<artifactId>pentaho-platform-build-utils</artifactId>
 			<version>${project.version}</version>
 			<scope>compile</scope>
@@ -2258,43 +2302,6 @@
 			<artifactId>mockito-core</artifactId>
 			<version>${mockito-core.version}</version>
 			<optional>true</optional>
-		</dependency>
-
-		<dependency>
-			<groupId>pentaho</groupId>
-			<artifactId>pentaho-platform-core-test</artifactId>
-			<version>${project.version}</version>
-			<optional>true</optional>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>pentaho</groupId>
-			<artifactId>pentaho-platform-repository-test</artifactId>
-			<version>${project.version}</version>
-			<optional>true</optional>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>pentaho</groupId>
-			<artifactId>pentaho-platform-scheduler-test</artifactId>
-			<version>${project.version}</version>
-			<optional>true</optional>
-			<exclusions>
-				<exclusion>
-					<groupId>*</groupId>
-					<artifactId>*</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
