[BACKLOG-12101] Added pentaho-server assembly

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -67,6 +67,7 @@
   <modules>
 
     <module>pentaho-server-manual</module>
+    <module>pentaho-server</module>
 
     <!-- <module>assembly</module> -->
 
