--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -59,7 +59,6 @@
     <bsf.version>2.4.0</bsf.version>
     <bsh.version>1.3.0</bsh.version>
     <commons-beanutils.version>1.8.0</commons-beanutils.version>
-    <commons-cli.version>1.0</commons-cli.version>
     <rhino.js.version>1.7R1</rhino.js.version>
     <slf4j-log4j12.version>1.6.1</slf4j-log4j12.version>
     <wkhtmltoimage.version>0.10.0_rc2-static</wkhtmltoimage.version>
@@ -82,7 +81,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
         <inherited>false</inherited>
         <executions>
           <execution>
@@ -1448,4 +1446,13 @@
       </exclusions>
     </dependency>
   </dependencies>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm-attrs</artifactId>
+            <version>${asm-attrs.version}</version>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
 </project>
