--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -61,7 +61,6 @@
     <commons-beanutils.version>1.8.0</commons-beanutils.version>
     <jettison.version>1.3.3</jettison.version>
     <monetdb-jdbc.version>2.8</monetdb-jdbc.version>
-    <rhino.js.version>1.7R1</rhino.js.version>
     <nekohtml.version>1.9.15</nekohtml.version>
     <slf4j-api.version>1.7.7</slf4j-api.version>
     <slf4j-log4j12.version>1.7.7</slf4j-log4j12.version>
@@ -71,7 +70,6 @@
     <wsdl4j.version>1.6.2</wsdl4j.version>
     <jackson.core.version>1.9.13</jackson.core.version>
     <jackson.mapper.version>${jackson.core.version}</jackson.mapper.version>
-    <jaxen.version>1.1.6</jaxen.version>
     <jcl-over-slf4j.version>1.7.4</jcl-over-slf4j.version>
     <commons-io.version>2.2</commons-io.version>
     <jackcess.version>1.2.6</jackcess.version>
@@ -526,7 +524,8 @@
             </goals>
             <configuration>
               <outputDirectory>${prep.pentaho.war.lib.dir}</outputDirectory>
-              <excludeArtifactIds>gwt-user,postgresql,jtds,h2,hsqldb,mysql-connector-java</excludeArtifactIds>
+              <excludeArtifactIds>gwt-user,postgresql,jtds,h2,hsqldb,mysql-connector-java,jsp-api</excludeArtifactIds>
+              <includeArtifactIds>barcode4j</includeArtifactIds>
             </configuration>
           </execution>
           <!-- Copying to tomcat/lib -->
@@ -832,7 +831,7 @@
           <artifactId>jug-lgpl</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>org.scannotation</groupId>
+          <groupId>net.sf.scannotation</groupId>
           <artifactId>scannotation</artifactId>
         </exclusion>
         <exclusion>
@@ -843,6 +842,43 @@
           <groupId>org.apache.xmlgraphics</groupId>
           <artifactId>batik-transcoder</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>concurrent</groupId>
+          <artifactId>concurrent</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.xmlgraphics</groupId>
+          <artifactId>batik-js</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.osgi</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.glassfish</groupId>
+          <artifactId>javax.servlet</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.ant</groupId>
+          <artifactId>ant</artifactId>
+        </exclusion>
+        <!-- CM-241 -->
+        <exclusion>
+          <groupId>cglib</groupId>
+          <artifactId>cglib</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>javax.ws.rs</groupId>
+          <artifactId>javax.ws.rs-api</artifactId>
+       </exclusion>
       </exclusions>
     </dependency>
 
@@ -993,12 +1029,6 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>ognl</groupId>
-      <artifactId>ognl</artifactId>
-      <version>${ognl.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>com.ibm.icu</groupId>
       <artifactId>icu4j</artifactId>
       <version>${icu4j.version}</version>
@@ -1054,6 +1084,18 @@
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
+      <version>${commons-beanutils.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils-core</artifactId>
       <version>${commons-beanutils.version}</version>
       <scope>compile</scope>
       <exclusions>
@@ -1181,9 +1223,9 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
-      <groupId>rhino</groupId>
-      <artifactId>js</artifactId>
-      <version>${rhino.js.version}</version>
+      <groupId>ognl</groupId>
+      <artifactId>ognl</artifactId>
+      <version>${ognl.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -1285,6 +1327,30 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.apache.karaf.jaas</groupId>
+      <artifactId>org.apache.karaf.jaas.config</artifactId>
+      <version>${org.apache.karaf.jaas.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.karaf</groupId>
+      <artifactId>org.apache.karaf.util</artifactId>
+      <version>${org.apache.karaf.main.version}</version>
+      <scope>compile</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.main</artifactId>
       <version>${org.apache.felix.main.version}</version>
@@ -1319,6 +1385,11 @@
           <artifactId>*</artifactId>
         </exclusion>
       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.utils</artifactId>
+      <version>${org.apache.felix.utils.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.felix</groupId>
@@ -1432,7 +1503,228 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>net.sf.barcode4j</groupId>
+      <artifactId>barcode4j</artifactId>
+      <version>${barcode4j.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+      <groupId>javax.xml.soap</groupId>
+      <artifactId>saaj-api</artifactId>
+      <version>${saaj.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+      <groupId>com.sun.xml.messaging.saaj</groupId>
+      <artifactId>saaj-impl</artifactId>
+      <version>${saaj.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+     </dependency>
+    <dependency>
+      <groupId>com.sun.xml.stream</groupId>
+      <artifactId>sjsxp</artifactId>
+      <version>${sjsxp.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+     </dependency>
+    <dependency>
+      <groupId>org.xerial.snappy</groupId>
+      <artifactId>snappy-java</artifactId>
+      <version>${snappy-java.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>*</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>wsdl4j</groupId>
+        <artifactId>wsdl4j-qname</artifactId>
+        <version>${wsdl4j-qname.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+    <dependency>
+        <groupId>org.eobjects.sassyreader</groupId>
+        <artifactId>SassyReader</artifactId>
+        <version>${sassyreader.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>avalon-framework</groupId>
+        <artifactId>avalon-framework</artifactId>
+        <version>${avalon.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.mnode.mstor</groupId>
+        <artifactId>mstor</artifactId>
+        <version>${mstor.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>com.googlecode.jsendnsca</groupId>
+        <artifactId>jsendnsca</artifactId>
+        <version>${jsendnsca.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.apache.xmlgraphics</groupId>
+        <artifactId>batik-gui-util</artifactId>
+        <version>${batik.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>bouncycastle</groupId>
+        <artifactId>bcmail-jdk14</artifactId>
+        <version>${bcmail.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>net.sourceforge.barbecue</groupId>
+        <artifactId>barbecue</artifactId>
+        <version>${barbecue.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.eclipse.core</groupId>
+        <artifactId>commands</artifactId>
+        <version>${commands.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>com.lowagie</groupId>
+        <artifactId>itext</artifactId>
+        <version>${itext.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>javax.jws</groupId>
+        <artifactId>jsr181-api</artifactId>
+        <version>${jsr181-api.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.jvnet.staxex</groupId>
+        <artifactId>stax-ex</artifactId>
+        <version>${stax-ex.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.w3c.css</groupId>
+        <artifactId>sac</artifactId>
+        <version>${sac.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>com.sun.org.apache.xml.internal</groupId>
+        <artifactId>resolver</artifactId>
+        <version>${resolver.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
+     <dependency>
+        <groupId>org.fife.ui</groupId>
+        <artifactId>rsyntaxtextarea</artifactId>
+        <version>${rsyntaxtextarea.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>*</groupId>
+            <artifactId>*</artifactId>
+          </exclusion>
+      </exclusions>
+     </dependency>
   </dependencies>
+
   <dependencyManagement>
     <dependencies>
         <dependency>
