--- a/pom.xml
+++ b/pom.xml
@@ -48,13 +48,18 @@
   <asm.version>3.1</asm.version>
   <aspectjrt.version>1.6.6</aspectjrt.version>
   <aspectjweaver.version>1.7.2</aspectjweaver.version>
+  <avalon.version>4.1.5</avalon.version>
   <axiom.version>1.2.8</axiom.version>
   <axis2.version>1.5</axis2.version>
+  <barbecue.version>1.5-beta1</barbecue.version>
+  <barcode4j.version>2.0</barcode4j.version>
   <batik.version>1.7</batik.version>
-  <bcprov-jdk16.version>1.46</bcprov-jdk16.version>
+  <bcprov-jdk14.version>138</bcprov-jdk14.version>
+  <bcmail.version>138</bcmail.version>
   <bean-matchers.version>0.9</bean-matchers.version>
   <castor.version>1.0.5</castor.version>
   <cglib.version>2.2</cglib.version>
+  <commands.version>3.3.0-I20070605-0010</commands.version>
   <commons-beanutils.version>1.8.0</commons-beanutils.version>
   <commons-cli.version>1.2</commons-cli.version>
   <commons-codec.version>1.9</commons-codec.version>
@@ -110,7 +115,7 @@
   <httpcore.version>4.0-beta3</httpcore.version>
   <infobright-core.version>3.4</infobright-core.version>
   <ini4j.version>0.5.1</ini4j.version>
-  <itext-rtf.version>2.1.7</itext-rtf.version>
+  <itext.version>2.1.7</itext.version>
   <jackcess.version>1.2.4</jackcess.version>
   <jackrabbit.version>2.10.0</jackrabbit.version>
   <jackson.version>1.9.3</jackson.version>
@@ -146,12 +151,14 @@
   <js.version>1.7R3</js.version>
   <jsch.version>0.1.46</jsch.version>
   <jsf-api.version>1.1</jsf-api.version>
+  <jsendnsca.version>2.0.1</jsendnsca.version>
   <json-path.version>0.8.1</json-path.version>
   <json-simple.version>1.1</json-simple.version>
   <json-unit.version>1.5.5</json-unit.version>
   <jsonpath.version>1.0</jsonpath.version>
   <jsp-api.version>2.1</jsp-api.version>
   <jsr305.version>1.3.9</jsr305.version>
+  <jsr181-api.version>1.0-MR1</jsr181-api.version>
   <jsr311-api.version>1.1.1</jsr311-api.version>
   <jstl.version>1.2</jstl.version>
   <jt400.version>6.1</jt400.version>
@@ -180,12 +187,14 @@
   <modelVersion>4.0.0</modelVersion>
   <mondrian.version>3.14-SNAPSHOT</mondrian.version>
   <monetdb-jdbc.version>2.1</monetdb-jdbc.version>
+  <mstor.version>0.9.13</mstor.version>
   <mvel2.version>2.0.10</mvel2.version>
   <neethi.version>2.0.1</neethi.version>
   <nekohtml.version>1.9.7</nekohtml.version>
   <odfdom-java.version>0.8.6</odfdom-java.version>
   <org.apache.felix.http.version>2.3.0</org.apache.felix.http.version>
   <org.apache.felix.main.version>4.2.1</org.apache.felix.main.version>
+  <org.apache.felix.utils.version>1.8.0</org.apache.felix.utils.version>
   <org.apache.karaf.jaas.version>2.4.2</org.apache.karaf.jaas.version>
   <org.apache.karaf.main.version>3.0.3</org.apache.karaf.main.version>
   <oro.version>2.0.8</oro.version>
@@ -200,8 +209,13 @@
   <powermock.version>1.6.3</powermock.version>
   <quartz.version>1.7.2</quartz.version>
   <rome.version>1.0</rome.version>
+  <resolver.version>20050927</resolver.version>
+  <rsyntaxtextarea.version>1.3.2</rsyntaxtextarea.version>
+  <sac.version>1.3</sac.version>
+  <saaj.version>1.3</saaj.version>
   <salesforce-partner.version>24.0</salesforce-partner.version>
   <sapdbc.version>7.4.4</sapdbc.version>
+  <sassyreader.version>0.5</sassyreader.version>
   <saxon.version>9.1.0.8</saxon.version>
   <scannotation.version>1.0.2</scannotation.version>
   <se-jcr.version>0.9</se-jcr.version>
@@ -211,9 +225,11 @@
   <shared.version>0.9.15</shared.version>
 
   <simple-jndi.version>1.0.0</simple-jndi.version>
+  <sjsxp.version>1.0</sjsxp.version>
   <slf4j-api.version>1.7.3</slf4j-api.version>
   <slf4j-log4j12.version>1.7.3</slf4j-log4j12.version>
   <snakeyaml.version>1.7</snakeyaml.version>
+  <snappy-java.version>1.1.0</snappy-java.version>
   <snmp4j.version>1.9.3d</snmp4j.version>
   <spring.framework.version>4.3.2.RELEASE</spring.framework.version>
   <spring.security.version>4.1.3.RELEASE</spring.security.version>
@@ -224,6 +240,7 @@
   <sqlite-jdbc.version>3.7.2</sqlite-jdbc.version>
 
   <stax-api.version>1.0-2</stax-api.version>
+  <stax-ex.version>1.0</stax-ex.version>
   <syslog4j.version>0.9.34</syslog4j.version>
   <taglibs-standard-impl.version>1.2.5</taglibs-standard-impl.version>
   <testng.version>6.5.2</testng.version>
@@ -235,6 +252,7 @@
   <webservices-api.version>2.1</webservices-api.version>
   <webservices-rt.version>2.1</webservices-rt.version>
   <wsdl4j.version>1.6.2</wsdl4j.version>
+  <wsdl4j-qname.version>1.6.1</wsdl4j-qname.version>
   <wstx-asl.version>3.2.4</wstx-asl.version>
   <xbean-spring.version>2.7</xbean-spring.version>
   <xercesImpl.version>2.9.1</xercesImpl.version>
@@ -362,4 +380,4 @@
       </modules>
     </profile>
   </profiles>
-</project>
+ </project>
