--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -839,6 +839,10 @@
           <groupId>jcifs</groupId>
           <artifactId>jcifs</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.apache.xmlgraphics</groupId>
+          <artifactId>batik-transcoder</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
@@ -1540,6 +1544,16 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-expression</artifactId>
         <version>${spring.framework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${spring.framework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.stream</groupId>
+        <artifactId>stax-api</artifactId>
+       <version>${stax-api.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
